--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <h3 class="text-info h4">Blad - A Blood Donation Platform ⚡ ⚙</h3>
+                <h3 class="text-info h4">Blad - A Blood Donation Platform</h3>
                 <p class="mb-3">Blad is a blood donation platform with a robust user role system, ensuring distinct
                     privileges for each role. Admins can view and edit all user information and donation requests,
                     overseeing the entire platform. Volunteers can access donation request lists and update their
