education typo fix

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <!-- Experience and Education Section -->
     <section class="container py-5" id="skills">
         <h2 class="text-info display-5 mb-4">My Education</h2>
-        <p class="mb-4">B.A in English Language, Dhaka University of Dhaka <br> 2019 - 2023</p>
+        <p class="mb-4">B.A in English Language, University of Dhaka <br> 2019 - 2023</p>
         <h3 class="text-info h5 mb-3">Expertise:</h3>
         <div class="d-flex flex-wrap gap-2 mb-4">
             <span class="badge bg-secondary p-2">React</span>
